--- a/color_edit.org
+++ b/color_edit.org
@@ -11,6 +11,8 @@ import math
 import sys
 from typing import Tuple
 from moviepy.editor import AudioClip, VideoFileClip, concatenate_videoclips
+from timeit import default_timer as timer
+from datetime import timedelta
 #+end_src
 
 
@@ -95,10 +97,17 @@ The above routine, which does the heavy lifting, returns a list of (start, end) 
 
 def color_edit(vid_file_clip):
     print("---- Looking for color coded editing clips... -----")
+
+    start = timer()
     intervals_to_keep = color_edit_intervals(vid_file_clip)
     print("Keeping color edit intervals: " + str(intervals_to_keep))
     keep_clips = [vid_file_clip.subclip(start, end) for [start, end] in intervals_to_keep]
     color_edited_video = concatenate_videoclips(keep_clips)
+    end = timer()
+
+    color_edit_time = timedelta(seconds=end-start)
+    print('Color edit time: ' + str(color_edit_time))
+
     return color_edited_video  
 #+end_src
 
@@ -158,10 +167,17 @@ The above routine did all the heavy lifting, returning a list of (start, end) ti
 
 def find_speaking(input_clip, input_audio_fps):
     print("\n\n\n----- Now cutting out dead air... -----")
+
+    start = timer()
     speaking_intervals = find_speaking_intervals(input_clip.audio, audio_fps=input_audio_fps)
     print("Keeping speaking intervals: " + str(speaking_intervals))
     speaking_clips = [input_clip.subclip(start, end) for [start, end] in speaking_intervals]
     final_video = concatenate_videoclips(speaking_clips)
+    end = timer()
+
+    speaking_detection_time = timedelta(seconds=end-start)
+    print('Speaking detection time: ' + str(speaking_detection_time))
+
     return final_video  
 #+end_src
 
@@ -184,6 +200,7 @@ def main():
     no_dead_air_video = find_speaking(color_edited_video, vid.audio.fps)
 
     print("\n\n\n----- Writing out edited video... -----")
+    start = timer()
     no_dead_air_video.write_videofile(file_out,
         #fps=60,
         preset='ultrafast',
@@ -193,8 +210,12 @@ def main():
         audio_codec="aac",
         threads=6
     )
-
     vid.close()
+    end=timer()
+
+    render_time = timedelta(seconds=end-start)
+    print('Render time: ' + str(render_time))
+
 
 if __name__ == '__main__':
     main()
