--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-To run:
+edit_normalize.sh takes in a video file and color-edits it and normalizes its volume.
 
-poetry run python3 color_edit.py <input video> <output video filename>
+See devcontainer.json, which basically installs requirements.txt
